--- a/Memories.html
+++ b/Memories.html
@@ -231,7 +231,7 @@
 			</ul>
 
 		</div>
-		<audio src="/img/aiZaiXiYuanLi.mp3" autoplay="autoplay" loop="loop">
+		<!--<audio src="/img/aiZaiXiYuanLi.mp3" autoplay="autoplay" loop="loop">-->
 
 			<script src="../js/jquery-1.8.3.min.js"></script>
 			<script src="../js/jquery.fullPage.min.js"></script>
